Updates .bashrc and sync shell script

--- a/Alfred.alfredpreferences/workflows/user.workflow.D4F58CD4-2658-40CA-BBEA-0A46767131BF/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.D4F58CD4-2658-40CA-BBEA-0A46767131BF/info.plist
@@ -866,7 +866,7 @@
 				<key>escaping</key>
 				<integer>68</integer>
 				<key>keyword</key>
-				<string>ens</string>
+				<string>e</string>
 				<key>queuedelaycustom</key>
 				<integer>1</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -1038,7 +1038,7 @@
 				<key>escaping</key>
 				<integer>68</integer>
 				<key>keyword</key>
-				<string>ent</string>
+				<string>et</string>
 				<key>queuedelaycustom</key>
 				<integer>1</integer>
 				<key>queuedelayimmediatelyinitially</key>
