--- a/Alfred.alfredpreferences/workflows/user.workflow.FC2451E6-B40C-47FD-A7B9-D2BCC70E5B0C/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.FC2451E6-B40C-47FD-A7B9-D2BCC70E5B0C/info.plist
@@ -38,11 +38,11 @@
 				<key>argument</key>
 				<integer>0</integer>
 				<key>hotkey</key>
-				<integer>37</integer>
+				<integer>26</integer>
 				<key>hotmod</key>
-				<integer>1179648</integer>
+				<integer>1310720</integer>
 				<key>hotstring</key>
-				<string>L</string>
+				<string>7</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
