--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -271,13 +271,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>627 186 445 77 0 0 1440 877 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>29 122 606 456 0 0 1440 877 </string>
+	<string>29 209 606 456 0 0 1440 877 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>1078 966 400 129 0 0 2560 1417 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>968 768 620 392 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1 5 1434 868 0 0 1440 877 </string>
+	<string>1 -6 1434 877 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>0 408 570 452 0 0 2560 1417 </string>
 	<key>New Bookmarks</key>
@@ -1240,13 +1240,13 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-06-23T16:40:39Z</date>
+	<date>2016-06-29T20:26:50Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<true/>
+	<false/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
