--- a/Alfred.alfredpreferences/preferences/features/snippets/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/features/snippets/prefs.plist
@@ -5,13 +5,11 @@
 	<key>hotkey</key>
 	<dict>
 		<key>key</key>
-		<integer>53</integer>
+		<integer>0</integer>
 		<key>mod</key>
-		<integer>1048576</integer>
+		<integer>0</integer>
 		<key>string</key>
-		<string>⎋</string>
+		<string></string>
 	</dict>
-	<key>limit</key>
-	<integer>1</integer>
 </dict>
 </plist>
