--- a/.atom/storage/application.json
+++ b/.atom/storage/application.json
@@ -1,1 +1,1 @@
-[{"initialPaths":["/Users/jesselumarie/repos/bricklane_repos/fundadmin"]},{"initialPaths":["/Users/jesselumarie/repos/bricklane_repos/bricklane/acceptance_tests"]},{"initialPaths":["/Users/jesselumarie/repos/bricklane_repos/bricklane"]}]
+[{"initialPaths":["/Users/jesselumarie/repos/bricklane_repos/bricklane"]}]
