--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,11 @@ name = Jesse Lumarie
 [alias]
 	co = checkout
 	last = log -1 HEAD
+	sync = !git fetch origin && git rebase origin/master
+	mine = !git log --no-merges --author=$(git config user.email)
 [push]
 	default = current
 [core]
 	excludesfile = /Users/jesselumarie/.gitignore_global
+[url "git@github.com:"]
+	insteadOf = https://github.com/
