--- a/Alfred.alfredpreferences/preferences/local/53910a8fbb5ba3286497e80e63c51af587b49772/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/local/53910a8fbb5ba3286497e80e63c51af587b49772/prefs.plist
@@ -2,9 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>currentthemeuid</key>
-	<string>theme.bundled.default</string>
-	<key>theme</key>
-	<string>alfred.theme.darkandsmooth</string>
+	<key>dontaskforpermissions</key>
+	<false/>
 </dict>
 </plist>
