--- a/Alfred.alfredpreferences/workflows/user.workflow.FC2451E6-B40C-47FD-A7B9-D2BCC70E5B0C/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.FC2451E6-B40C-47FD-A7B9-D2BCC70E5B0C/info.plist
@@ -39,12 +39,16 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
-				<integer>26</integer>
+				<integer>37</integer>
 				<key>hotmod</key>
 				<integer>1179648</integer>
 				<key>hotstring</key>
-				<string>7</string>
+				<string>L</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -82,18 +86,20 @@
 		<key>432B1DDD-EA4A-4870-B819-4B2ABAFF050B</key>
 		<dict>
 			<key>xpos</key>
-			<integer>100</integer>
+			<real>100</real>
 			<key>ypos</key>
-			<real>10</real>
+			<real>15</real>
 		</dict>
 		<key>CE342434-3A26-442E-87EE-28741C55646B</key>
 		<dict>
 			<key>xpos</key>
-			<integer>500</integer>
+			<real>500</real>
 			<key>ypos</key>
-			<real>10</real>
+			<real>15</real>
 		</dict>
 	</dict>
+	<key>userconfigurationconfig</key>
+	<array/>
 	<key>webaddress</key>
 	<string></string>
 </dict>
