--- a/Alfred.alfredpreferences/preferences/local/e1d4448d4f1fb43cd54c5ae09fbd47ca62b8e346/hotkey/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/local/e1d4448d4f1fb43cd54c5ae09fbd47ca62b8e346/hotkey/prefs.plist
@@ -2,16 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>hotkey</key>
+	<key>default</key>
 	<dict>
 		<key>key</key>
-		<integer>53</integer>
+		<integer>49</integer>
 		<key>mod</key>
 		<integer>1048576</integer>
 		<key>string</key>
-		<string></string>
+		<string> </string>
 	</dict>
-	<key>limit</key>
-	<integer>1</integer>
 </dict>
 </plist>
