--- a/Alfred.alfredpreferences/workflows/user.workflow.97D0F5EA-F6E7-4A61-9972-3F8DE9A2DA67/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.97D0F5EA-F6E7-4A61-9972-3F8DE9A2DA67/info.plist
@@ -37,12 +37,16 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
-				<integer>28</integer>
+				<integer>1</integer>
 				<key>hotmod</key>
 				<integer>1179648</integer>
 				<key>hotstring</key>
-				<string>8</string>
+				<string>S</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -80,18 +84,20 @@
 		<key>5F548A32-1962-43CE-B19B-D20BEB5B6207</key>
 		<dict>
 			<key>xpos</key>
-			<integer>180</integer>
+			<real>180</real>
 			<key>ypos</key>
-			<integer>10</integer>
+			<real>15</real>
 		</dict>
 		<key>86B146C6-FA22-4227-868C-79F19B6D74EC</key>
 		<dict>
 			<key>xpos</key>
-			<integer>450</integer>
+			<real>450</real>
 			<key>ypos</key>
-			<integer>10</integer>
+			<real>15</real>
 		</dict>
 	</dict>
+	<key>userconfigurationconfig</key>
+	<array/>
 	<key>webaddress</key>
 	<string></string>
 </dict>
